<resources>
    <string name="app_name">MyApp</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="registration">Регистрация</string>
    <string name="login">Вход</string>
    <string name="enter_email_or_number">Введите email/номер</string>
    <string name="enter_email">Введите email</string>
    <string name="enter_password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="register">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="login_automatic">Входить автоматически</string>
    <string name="login_button">ВОЙТИ</string>
    <string name="by_number">По номеру</string>
    <string name="by_email">По email</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="invalid_email">Некорректный email</string>
    <string name="invalid_phone">Некорректный номер телефона</string>
    <string name="short_password">Пароль слишком короткий</string>
    <string name="passwords_do_not_match">Пароли не совпадают</string>
    <string name="registration_success">Регистрация прошла успешно</string>
    <string name="error_invalid_credentials">Неверный email/телефон или пароль</string>



</resources>
