<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity"
    android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/header"
        style="@style/HeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/subheader"
        style="@style/SubheaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="48dp"
        style="@style/EditTextStyle"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/subheader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.65"
        android:hint="@string/enter_email"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="48dp"
        style="@style/EditTextStyle"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.65"
        android:hint="@string/enter_password"/>

    <CheckBox
        android:id="@+id/auto_login_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/login_automatic"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintStart_toStartOf="@id/password_input"
        app:layout_constraintEnd_toEndOf="@id/password_input"
        android:textColor="@color/darkGray"/>

    <Button
        android:id="@+id/login_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/auto_login_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
